[package]
name = "kstretch"
version = "0.1.0"
authors = ["cxd"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kstretch"
crate-type = ["cdylib"]

[dependencies]
blake2 = "*"
hex = "*"
pyo3 = { version = "*", features = ["extension-module"]}
generic-array = "*"
rayon = "*"

